[package]
name = "emphasket"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled"] }
clap = { version = "3.1.8", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking"] }
